Update settings, views, and URLs, restructure templates, and remove unused first.html

--- a/django_templates_project/template_app/templates/template_app/first.html
+++ b/django_templates_project/template_app/templates/template_app/first.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +5,7 @@
     <title>Main Page</title>
 </head>
 <body>
-    <h1>Main Page</h1>
-    <h2>Hamit Licina</h2>
+    <h1>Hamit Licina</h1>
+    <h2>Yasemin Licina</h2>
 </body>
 </html>
