Updated project settings and templates with new functionality

--- a/django_templates_project/template_app/templates/template_app/first.html
+++ b/django_templates_project/template_app/templates/template_app/first.html
@@ -1,11 +1,7 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
-</head>
-<body>
-    <h1>Hamit Licina</h1>
-    <h2>Yasemin Licina</h2>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1>Yasemin Liçina </h1>
+
+{% endblock %}
