Add custom 404 page, static assets, and update settings and first.html for improved functionality

--- a/django_templates_project/template_app/templates/template_app/first.html
+++ b/django_templates_project/template_app/templates/template_app/first.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 
 <h1>Yasemin Liçina </h1>
+<img src="{% static 'template_app/nature.png' %}" alt="My nature picture">
 
 {% endblock %}
